--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,20 @@ h2 {
 }
 
 p {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 20%;
+    margin-right: 19%;
     line-height: 150%;
+}
+
+.wp-banner img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.wp-banner {
+    height: 300px;
+    display: flex;
 }
 
 a {
@@ -44,6 +55,7 @@ p a {
 .nav-bar {
     text-align: center;
     margin: 0px;
+    margin-bottom: 50px;
     padding: 0px;
 }
 
@@ -69,7 +81,8 @@ p a {
 }
 
 .contact-list {
-    margin-left: 100px;
+    margin-top: 3%;
+    margin-left: 20%;
 }
 
 .music-list {
